unpackaged/main/default/objects/nbavs__Insights_Notes__c/nbavs__Insights_Notes__c.object-meta.xml
<CustomObject>
    <label>Insight Note Deprecated</label>
    <nameField>
        <displayFormat>Note-{0000}</displayFormat>
        <label>Insights Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insights Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>