unpackaged/main/default/objects/nbavs__Insights_Notes__c/fields/nbavs__Content__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Content__c</fullName>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>