unpackaged/main/default/objects/nbavs__Insights_Notes__c/fields/nbavs__Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Event_Timestamp__c</fullName>
    <label>Event Timestamp</label>
    <length>10</length>
    <type>Text</type>
</CustomField>