unpackaged/main/default/objects/nbavs__Insights_Notes__c/fields/nbavs__Natterbox_Related_To__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Natterbox_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Natterbox user (may be agent) related to the note</description>
    <label>Natterbox Related To</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Insights Notes (Natterbox Related To)</relationshipLabel>
    <relationshipName>Insights_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>