unpackaged/main/default/objects/nbavs__Insights_Notes__c/fields/nbavs__Natterbox_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Natterbox_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who creates the notes</description>
    <label>Natterbox Owner</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Insights Notes Natterbox Owner</relationshipLabel>
    <relationshipName>Insights_Notes2</relationshipName>
    <type>Lookup</type>
</CustomField>