unpackaged/main/default/objects/nbavs__Insights_Notes__c/fields/nbavs__Relating_to__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Relating_to__c</fullName>
    <description>the related uuid reference of the agent/user associated to the note</description>
    <label>Natterbox Related to uuid</label>
    <length>64</length>
    <type>Text</type>
</CustomField>