unpackaged/main/default/objects/nbavs__Insights_Notes__c/fields/nbavs__Reporting_UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Reporting_UUID__c</fullName>
    <label>Reporting UUID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>