unpackaged/main/default/objects/nbavs__Insights_Notes__c/validationRules/nbavs__Check_if_note_is_closed_by_the_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>nbavs__Check_if_note_is_closed_by_the_owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(nbavs__Is_Closed__c),
 nbavs__Is_Closed__c = true, $User.Id &lt;&gt; CreatedById)</errorConditionFormula>
    <errorMessage>Only creator of the note is allowed to close the note</errorMessage>
</ValidationRule>