unpackaged/main/default/objects/nbavs__Insights_Notes__c/listViews/nbavs__All.listView-meta.xml
<ListView>
    <fullName>nbavs__All</fullName>
    <columns>NAME</columns>
    <columns>nbavs__Content__c</columns>
    <columns>nbavs__Reporting_UUID__c</columns>
    <columns>nbavs__Insights__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>